--- a/templates/admin/booking/index.html.twig
+++ b/templates/admin/booking/index.html.twig
@@ -22,7 +22,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for booking in bookings %}
+                {% for booking in pagination.data %}
 
                 <tr>
                     <td class="text-center font-weight-bold">{{ booking.id }}</td>
@@ -51,20 +51,6 @@
                 {% endfor %}
             </tbody>
         </table>
-        <div class="d-flex justify-content-center">
-            <ul class="pagination">
-                <li class="page-item {% if page == 1 %}disabled{% endif %}">
-                    <a class="page-link" href="{{ path('admin_bookings_index', {'page': page - 1}) }}">&laquo;</a>
-                </li>
-                {% for i in 1..pages %}
-                <li class="page-item {% if page == i %}active{% endif %}">
-                    <a class="page-link" href="{{ path('admin_bookings_index', {'page': i}) }}">{{ i }}</a>
-                </li>
-                {% endfor %}
-                <li class="page-item {% if page == pages %}disabled{% endif %}">
-                    <a class="page-link" href="{{ path('admin_bookings_index', {'page': page + 1}) }} ">&raquo;</a>
-                </li>
-            </ul>
-        </div>
+        {{ pagination.display() }}
     </div>
 {% endblock %}
