--- a/templates/admin/comment/index.html.twig
+++ b/templates/admin/comment/index.html.twig
@@ -18,7 +18,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for comment in comments %}
+                {% for comment in pagination.data %}
                 <tr>
                     <td class="text-center">{{ comment.id }}</td>
                     <td>{{ comment.createdAt|date('d/m/Y H:i') }}</td>
@@ -42,5 +42,6 @@
                 {% endfor %}
             </tbody>
         </table>
+        {{ pagination.display() }}
     </div>
 {% endblock %}
