--- a/templates/admin/dashboard/index.html.twig
+++ b/templates/admin/dashboard/index.html.twig
@@ -69,8 +69,8 @@
             <div class="alert alert-success">
                 <h2 class="alert-heading my-3"><i class="fas fa-arrow-up"></i> Les annonces populaires</h2>
 
-                <table class="table table-hover">
-                    <thead>
+                <table class="table table-hover table-dashboard">
+                    <thead class="text-center">
                         <tr>
                             <th>Annonce</th>
                             <th>Poprio</th>
@@ -81,11 +81,11 @@
                         {% for ad in bestAds %}
                         <tr>
                             <td>{{ad.title}}</td>
-                            <td>
+                            <td class="text-center">
                                 <img src="{{ad.picture}}" alt="" class="avatar avatar-mini"> {{ad.firstName}} {{ad.lastName}}
                             </td>
                             <td class="text-center">
-                                <span class="badge badge-dark">
+                                <span class="badge badge-light">
                                     {{ad.note | number_format(1, ",", " ")}}
                                 </span>
                             </td>
@@ -99,8 +99,8 @@
              <div class="alert alert-danger">
                 <h2 class="alert-heading my-3"><i class="fas fa-arrow-down"></i> Les pires annonces</h2>
 
-                <table class="table table-hover">
-                    <thead>
+                <table class="table table-hover table-dashboard">
+                    <thead class="text-center">
                         <tr>
                             <th>Annonce</th>
                             <th>Poprio</th>
@@ -111,11 +111,11 @@
                         {% for ad in worstAds %}
                         <tr>
                             <td>{{ad.title}}</td>
-                            <td>
+                            <td class="text-center">
                                 <img src="{{ad.picture}}" alt="" class="avatar avatar-mini"> {{ad.firstName}} {{ad.lastName}}
                             </td>
                             <td class="text-center">
-                                <span class="badge badge-dark">
+                                <span class="badge badge-light">
                                     {{ad.note | number_format(1, ",", " ")}}
                                 </span>
                             </td>
