--- a/templates/admin/partials/header.html.twig
+++ b/templates/admin/partials/header.html.twig
@@ -43,10 +43,11 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('homepage') }}">
                     <i class="fas fa-eye"></i>
-                    Accueil
-                </a>
+                    &nbsp;Accueil</a>
             </li>
-        {% if app.user %}
+
+            {% if app.user %}
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="accountDropdownLink" data-toggle="dropdown">
                     <img src="{{ app.user.picture }}" class="avatar avatar-mini" alt="Avatar de {{ app.user.fullName }}">
@@ -61,7 +62,9 @@
                     <a href="{{ path('admin_account_logout') }}" class="dropdown-item">Déconnexion</a>
                 </div>
             </li>
-        {% endif %}
+
+            {% endif %}
+            
         </ul>
     </div>
 </nav>
