--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar bg-light">
-    <a class="navbar-brand" href="{{ path('homepage') }}">H B & B</a>
+    <a class="navbar-brand" href="{{ path('homepage') }}">A B & B</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" 
             data-target="#navbarColor03" aria-controls="navbarColor03" 
             aria-expanded="false" aria-label="Toggle navigation">
